--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="main_color">#FFBB86FC</color>
+    <color name="main_gray">#eeeeee</color>
+    <color name="primary_text_gray">#eeeeee</color>
 </resources>
