--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,11 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+
+    <style name="AppTheme.HulaTheme" parent="AppTheme">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">#C4C4C4</item>
+        <item name="android:textSize">14sp</item>
+    </style>
 </resources>
