--- a/app/src/main/res/layout/activity_register_favorite.xml
+++ b/app/src/main/res/layout/activity_register_favorite.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/shape_def_windowbg"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
@@ -27,44 +28,32 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_marginEnd="10dp"
-            android:src="@mipmap/icon_step_2" />
-
-        <com.hula.myapplication.widget.HuLaActionBarMenu
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            app:menu_text="Skip"
-            app:menu_textColor="#8E73D3" />
+            android:src="@mipmap/icon_step_3" />
     </com.hula.myapplication.widget.HuLaActionBar>
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="45dp"
-        android:layout_marginTop="30dp"
-        android:text="School"
-        android:textColor="#5C5C5C" />
-
-    <com.hula.myapplication.widget.HuLaTextView
-        android:id="@+id/tv_school"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="45dp"
-        android:layout_marginTop="3dp"
-        android:background="@drawable/shape_radius15_stroke1"
-        android:drawableEnd="@mipmap/icon_down"
-        android:hint="Select University"
-        android:padding="20dp"
-        app:tv_hintStartDrawable="@mipmap/icon_school" />
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="70dp"
+        android:text="My Favorite Categories"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="45dp"
-        android:layout_marginTop="10dp"
-        android:text="Hula will customize your event recommendation based on your school community." />
+        android:layout_marginHorizontal="32dp"
+        android:text="Select at least 6 categories and we will curate personalized event recommendations for you" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginTop="12dp"
+        android:layout_weight="1"
+        tools:listitem="@layout/item_favorite_group"/>
 
     <TextView
         android:id="@+id/tv_confirm"
@@ -72,11 +61,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="60dp"
-        android:enabled="true"
         android:paddingHorizontal="71dp"
         android:text="Continue"
+        android:layout_marginBottom="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
+
 </LinearLayout>
