--- a/app/src/main/res/layout/activity_register_notification.xml
+++ b/app/src/main/res/layout/activity_register_notification.xml
@@ -14,57 +14,45 @@
         app:acb_enableBack="false"
         app:acb_title="">
 
-        <TextView
-            android:id="@+id/tv_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:padding="10dp"
-            android:text="Back"
-            android:textStyle="bold" />
-
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_marginEnd="10dp"
             android:src="@mipmap/icon_step_2" />
-
-        <com.hula.myapplication.widget.HuLaActionBarMenu
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            app:menu_text="Skip"
-            app:menu_textColor="#8E73D3" />
     </com.hula.myapplication.widget.HuLaActionBar>
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="45dp"
-        android:layout_marginTop="30dp"
-        android:text="School"
-        android:textColor="#5C5C5C" />
-
-    <com.hula.myapplication.widget.HuLaTextView
-        android:id="@+id/tv_school"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="45dp"
-        android:layout_marginTop="3dp"
-        android:background="@drawable/shape_radius15_stroke1"
-        android:drawableEnd="@mipmap/icon_down"
-        android:hint="Select University"
-        android:padding="20dp"
-        app:tv_hintStartDrawable="@mipmap/icon_school" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="70dp"
+        android:text="Turn on Notifications"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="45dp"
-        android:layout_marginTop="10dp"
-        android:text="Hula will customize your event recommendation based on your school community." />
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginTop="15dp"
+        android:lineSpacingMultiplier="1.6"
+        android:text="• Get notified when you receive new buddy invites\n• Stay updated on all your buddies and shared events\n• Receive exclusive event promotions" />
+
+    <com.hula.myapplication.widget.HulaSwitch
+        android:id="@+id/image_switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center_horizontal"
+        android:padding="5dp"
+        app:showText="false" />
+    <ImageView
+        android:layout_gravity="center_horizontal"
+        android:src="@mipmap/icon_notification_hint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/tv_confirm"
@@ -75,7 +63,7 @@
         android:layout_marginTop="60dp"
         android:enabled="true"
         android:paddingHorizontal="71dp"
-        android:text="Continue"
+        android:text="Next"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
