--- a/app/src/main/res/layout/activity_register_favorite.xml
+++ b/app/src/main/res/layout/activity_register_favorite.xml
@@ -63,7 +63,7 @@
         android:layout_gravity="center_horizontal"
         android:paddingHorizontal="71dp"
         android:text="Continue"
-        android:layout_marginBottom="40dp"
+        android:layout_marginVertical="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
