--- a/app/src/main/res/layout/activity_register_intro.xml
+++ b/app/src/main/res/layout/activity_register_intro.xml
@@ -41,10 +41,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp" />
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -207,7 +203,6 @@
                 android:text="Check out some prompts for inspiration below" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:layout_marginBottom="10dp"
                 android:layout_marginHorizontal="32dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
@@ -220,7 +215,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="40dp"
+        android:layout_marginVertical="20dp"
         android:paddingHorizontal="71dp"
         android:text="Continue"
         app:layout_constraintEnd_toEndOf="parent"
