--- a/app/src/main/res/layout/activity_register_pic.xml
+++ b/app/src/main/res/layout/activity_register_pic.xml
@@ -112,7 +112,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="60dp"
+        android:layout_marginVertical="20dp"
         android:enabled="true"
         android:paddingHorizontal="71dp"
         android:text="Continue"
