--- a/app/src/main/res/values/defstyle.xml
+++ b/app/src/main/res/values/defstyle.xml
@@ -36,6 +36,12 @@
         <item name="cornerSize">10dp</item>
     </style>
 
+    <!--ShapeableImageView 圆角20dp-->
+    <style name="RoundedStyle20">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">20dp</item>
+    </style>
+
 
     <!--ShapeableImageView 圆 -->
     <style name="CircleStyle">
