--- a/app/src/main/res/layout/home_item_create_your_own.xml
+++ b/app/src/main/res/layout/home_item_create_your_own.xml
@@ -47,13 +47,13 @@
         android:padding="15dp"
         android:text="Create Group"
         android:textColor="@color/white"
-        app:layout_constraintEnd_toStartOf="@+id/textView22"
+        app:layout_constraintEnd_toStartOf="@+id/tv_create_event"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_hint" />
 
     <TextView
-        android:id="@+id/textView22"
+        android:id="@+id/tv_create_event"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
