--- a/app/src/main/res/layout/activity_add_new_event.xml
+++ b/app/src/main/res/layout/activity_add_new_event.xml
@@ -173,7 +173,7 @@
                 android:layout_marginTop="16dp"
                 android:text="Website Link" />
 
-            <com.hula.myapplication.widget.HuLaTextView
+            <com.hula.myapplication.widget.HuLaEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
@@ -181,7 +181,7 @@
                 android:hint="Add the website link"
                 android:minLines="3"
                 android:padding="15dp"
-                app:tv_hintStartDrawable="@mipmap/icon_link_hint" />
+                app:edit_hintStartDrawable="@mipmap/icon_link_hint" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -189,7 +189,7 @@
                 android:layout_marginTop="16dp"
                 android:text="Ticket Price" />
 
-            <com.hula.myapplication.widget.HuLaTextView
+            <com.hula.myapplication.widget.HuLaEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
@@ -197,7 +197,7 @@
                 android:hint="Select a time"
                 android:padding="15dp"
                 android:singleLine="true"
-                app:tv_hintStartDrawable="@mipmap/icon_price_hint" />
+                app:edit_hintStartDrawable="@mipmap/icon_price_hint" />
 
             <TextView
                 android:layout_width="wrap_content"
