--- a/app/src/main/res/values/defstyle.xml
+++ b/app/src/main/res/values/defstyle.xml
@@ -13,7 +13,7 @@
         <item name="android:windowNoTitle">true</item>
     </style>
 
-    <style name="LDialogStyle.LoadingStyle" parent="LDialogStyle">
+    <style name="LDialogStyle.NoDim" parent="LDialogStyle">
         <item name="android:backgroundDimEnabled">false</item>
     </style>
 
