增加了部分设置静态页面

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,9 @@
 
     <color name="app_main_color">#8E73D3</color>
     <color name="color_898989">#898989</color>
+    <color name="color_878787">#878787</color>
+    <color name="color_2e2e2e">#2E2E2E</color>
+    <color name="color_5C5C5C">#5C5C5C</color>
     <color name="start" tools:ignore="MissingDefaultResource">#2D3F51B5</color>
     <color name="end" tools:ignore="MissingDefaultResource">#073F51B5</color>
 
