--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -6,6 +6,7 @@
     android:background="@color/white"
     android:orientation="vertical">
 
+
     <com.hula.myapplication.widget.HuLaActionBar
         android:id="@+id/action_bar"
         style="@style/defActionBarStyle"
@@ -77,406 +78,9 @@
 
     </com.hula.myapplication.widget.HuLaActionBar>
 
-    <ScrollView
+    <com.hula.myapplication.widget.NoScrollViewPager
+        android:id="@+id/viewpager_mine"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@null">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="@dimen/dimen_16"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|start"
-                android:text="@string/my_photo"
-                android:textColor="@color/color_2e2e2e"
-                android:textSize="18dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|start"
-                android:layout_marginTop="@dimen/dimen_2"
-                android:text="@string/mine_notice_1"
-                android:textColor="@color/color_2e2e2e"
-                android:textSize="13dp" />
-
-            <RelativeLayout
-                android:layout_width="@dimen/dimen_194"
-                android:layout_height="@dimen/dimen_158"
-                android:layout_marginTop="@dimen/dimen_6"
-                android:layout_gravity="center">
-
-                <ImageView
-                    android:id="@+id/img_phtoto_1"
-                    android:layout_width="@dimen/dimen_158"
-                    android:layout_height="@dimen/dimen_158"
-                    android:layout_centerInParent="true"
-                    android:src="@mipmap/icon_default_photo" />
-
-                <ImageView
-                    android:id="@+id/img_add"
-                    android:layout_width="@dimen/dimen_36"
-                    android:layout_height="@dimen/dimen_36"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentBottom="true"
-                    android:background="@mipmap/icon_add_2"/>
-
-            </RelativeLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_17"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/img_phtoto_2"
-                    android:layout_width="@dimen/dimen_105"
-                    android:layout_height="@dimen/dimen_105"
-                    android:src="@mipmap/icon_add_image"/>
-
-                <ImageView
-                    android:id="@+id/img_phtoto_3"
-                    android:layout_width="@dimen/dimen_105"
-                    android:layout_height="@dimen/dimen_105"
-                    android:layout_marginHorizontal="@dimen/dimen_14"
-                    android:src="@mipmap/icon_add_image"/>
-
-                <ImageView
-                    android:id="@+id/img_phtoto_4"
-                    android:layout_width="@dimen/dimen_105"
-                    android:layout_height="@dimen/dimen_105"
-                    android:src="@mipmap/icon_add_image"/>
-
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|start"
-                android:layout_marginTop="@dimen/dimen_30"
-                android:layout_marginBottom="@dimen/dimen_8"
-                android:text="@string/my_photo"
-                android:textColor="@color/color_2e2e2e"
-                android:textSize="18dp" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp1"
-                android:background="@color/color_878787"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_56"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|start"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical|start"
-                        android:maxLines="1"
-                        android:ellipsize="end"
-                        android:text="@string/name"
-                        android:textColor="@color/color_2e2e2e"
-                        android:textSize="13dp" />
-
-                    <TextView
-                        android:id="@+id/tv_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical|start"
-                        android:maxLines="1"
-                        android:ellipsize="end"
-                        android:textColor="@color/color_5C5C5C"
-                        android:textSize="13dp" />
-                </LinearLayout>
-
-                <ImageView
-                    android:layout_width="@dimen/dimen_16"
-                    android:layout_height="@dimen/dimen_16"
-                    android:layout_marginStart="@dimen/dimen_16"
-                    android:layout_gravity="center_vertical"
-                    android:src="@mipmap/icon_more"/>
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp1"
-                android:background="@color/color_878787"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_56"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|start"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical|start"
-                        android:maxLines="1"
-                        android:ellipsize="end"
-                        android:text="@string/age"
-                        android:textColor="@color/color_2e2e2e"
-                        android:textSize="13dp" />
-
-                    <TextView
-                        android:id="@+id/tv_age"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical|start"
-                        android:maxLines="1"
-                        android:ellipsize="end"
-                        android:textColor="@color/color_5C5C5C"
-                        android:textSize="13dp" />
-                </LinearLayout>
-
-                <ImageView
-                    android:layout_width="@dimen/dimen_16"
-                    android:layout_height="@dimen/dimen_16"
-                    android:layout_marginStart="@dimen/dimen_16"
-                    android:layout_gravity="center_vertical"
-                    android:src="@mipmap/icon_more"/>
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp1"
-                android:background="@color/color_878787"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_56"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|start"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical|start"
-                        android:maxLines="1"
-                        android:ellipsize="end"
-                        android:text="@string/job_time"
-                        android:textColor="@color/color_2e2e2e"
-                        android:textSize="13dp" />
-
-                    <TextView
-                        android:id="@+id/tv_job_time"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical|start"
-                        android:maxLines="1"
-                        android:ellipsize="end"
-                        android:textColor="@color/color_5C5C5C"
-                        android:textSize="13dp" />
-                </LinearLayout>
-
-                <ImageView
-                    android:layout_width="@dimen/dimen_16"
-                    android:layout_height="@dimen/dimen_16"
-                    android:layout_marginStart="@dimen/dimen_16"
-                    android:layout_gravity="center_vertical"
-                    android:src="@mipmap/icon_more"/>
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp1"
-                android:background="@color/color_878787"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_56"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|start"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical|start"
-                        android:maxLines="1"
-                        android:ellipsize="end"
-                        android:text="@string/drink"
-                        android:textColor="@color/color_2e2e2e"
-                        android:textSize="13dp" />
-
-                    <TextView
-                        android:id="@+id/tv_drink"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical|start"
-                        android:maxLines="1"
-                        android:ellipsize="end"
-                        android:textColor="@color/color_5C5C5C"
-                        android:textSize="13dp" />
-                </LinearLayout>
-
-                <ImageView
-                    android:layout_width="@dimen/dimen_16"
-                    android:layout_height="@dimen/dimen_16"
-                    android:layout_marginStart="@dimen/dimen_16"
-                    android:layout_gravity="center_vertical"
-                    android:src="@mipmap/icon_more"/>
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp1"
-                android:background="@color/color_878787"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|start"
-                android:layout_marginTop="@dimen/dimen_24"
-                android:text="@string/profile_tag"
-                android:textColor="@color/color_2e2e2e"
-                android:textSize="18dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|start"
-                android:layout_marginTop="@dimen/dimen_2"
-                android:text="@string/mine_notice_2"
-                android:textColor="@color/color_2e2e2e"
-                android:textSize="13dp" />
-
-            <!--TODO 自定义显示控件-->
-            <View
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|start"
-                android:layout_marginTop="@dimen/dimen_24"
-                android:text="@string/about_me"
-                android:textColor="@color/color_2e2e2e"
-                android:textSize="18dp" />
-
-            <RelativeLayout
-                android:id="@+id/ll_about_me"
-                android:layout_width="match_parent"
-                android:layout_height="103dp"
-                android:layout_marginTop="@dimen/dimen_8"
-                android:padding="@dimen/dimen_12"
-                android:background="@drawable/shape_radius15_stroke1">
-
-                <EditText
-                    android:id="@+id/edit_about_me"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_toStartOf="@id/tv_edit_length"
-                    android:background="@null"
-                    android:inputType="textMultiLine"
-                    android:lineSpacingMultiplier="1.2"
-                    android:maxLength="160"
-                    android:textColor="@color/color_5C5C5C"
-                    android:textSize="@dimen/dimen_14" />
-
-                <TextView
-                    android:id="@+id/tv_edit_length"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginStart="@dimen/dimen_8"
-                    android:maxLines="1"
-                    android:ellipsize="end"
-                    android:text="160"
-                    android:textColor="@color/app_main_color"
-                    android:textSize="13dp" />
-            </RelativeLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp1"
-                android:layout_marginTop="@dimen/dimen_24"
-                android:layout_marginBottom="@dimen/dimen_24"
-                android:background="@color/color_878787"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|start"
-                android:text="@string/categories_into"
-                android:textColor="@color/color_2e2e2e"
-                android:textSize="18dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|start"
-                android:layout_marginTop="@dimen/dimen_2"
-                android:text="@string/mine_notice_3"
-                android:textColor="@color/color_2e2e2e"
-                android:textSize="13dp" />
-
-            <!--TODO 自定义显示控件-->
-            <View
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp1"
-                android:layout_marginTop="@dimen/dimen_24"
-                android:layout_marginBottom="@dimen/dimen_24"
-                android:background="@color/color_878787"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|start"
-                android:text="@string/buck_list"
-                android:textColor="@color/color_2e2e2e"
-                android:textSize="18dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|start"
-                android:layout_marginTop="@dimen/dimen_2"
-                android:text="@string/mine_notice_4"
-                android:textColor="@color/color_2e2e2e"
-                android:textSize="13dp" />
-
-        </LinearLayout>
-
-
-    </ScrollView>
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
