--- a/app/src/main/res/layout/item_image_view.xml
+++ b/app/src/main/res/layout/item_image_view.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.hula.myapplication.widget.DelectImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="95dp"
-    android:layout_height="95dp"
-    android:layout_marginEnd="8dp"
-    android:scaleType="centerCrop"
-    android:src="@mipmap/icon_add_image"/>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:paddingEnd="12dp"
+    android:paddingBottom="12dp"
+    tools:ignore="RtlSymmetry">
+
+    <com.hula.myapplication.widget.DelectImageView
+        android:id="@+id/iv"
+        android:layout_width="95dp"
+        android:layout_height="95dp"
+        android:scaleType="centerCrop"
+        android:background="@mipmap/icon_add_image" />
+</FrameLayout>
