--- a/app/src/main/res/layout/activity_register_favorite.xml
+++ b/app/src/main/res/layout/activity_register_favorite.xml
@@ -48,6 +48,7 @@
         android:text="Select at least 6 categories and we will curate personalized event recommendations for you" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginHorizontal="32dp"
