--- a/app/src/main/res/layout/activity_register_favorite.xml
+++ b/app/src/main/res/layout/activity_register_favorite.xml
@@ -57,6 +57,7 @@
         tools:listitem="@layout/item_favorite_group"/>
 
     <TextView
+        android:enabled="false"
         android:id="@+id/tv_confirm"
         style="@style/defButtonStyle"
         android:layout_width="wrap_content"
