--- a/app/src/main/res/layout/item_favorite_sub.xml
+++ b/app/src/main/res/layout/item_favorite_sub.xml
@@ -1,25 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/shape_radius100_strock1_8e73d3"
-    android:gravity="center"
-    android:orientation="horizontal"
-    android:paddingHorizontal="16dp"
-    android:paddingVertical="11dp">
+    android:paddingVertical="5dp"
+    android:paddingEnd="8dp"
+    tools:ignore="RtlSymmetry">
 
-    <ImageView
-        android:id="@+id/iv"
-        android:layout_width="24dp"
-        android:layout_height="24dp" />
-
-    <TextView
-        android:maxLines="1"
-        android:id="@+id/tv"
+    <LinearLayout
+        android:id="@+id/layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="6dp"
-        tools:text="Theatre" />
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="10dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="11dp">
 
-</LinearLayout>
+
+        <ImageView
+            android:id="@+id/iv"
+            android:layout_width="24dp"
+            android:layout_height="24dp" />
+
+        <TextView
+            android:id="@+id/tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
+            android:maxLines="1"
+            tools:text="Theatre" />
+
+    </LinearLayout>
+</FrameLayout>
