--- a/app/src/main/res/layout/activity_register_intro.xml
+++ b/app/src/main/res/layout/activity_register_intro.xml
@@ -203,6 +203,7 @@
                 android:text="Check out some prompts for inspiration below" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
                 android:layout_marginHorizontal="32dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
