--- a/app/src/main/res/layout/item_favorite_group.xml
+++ b/app/src/main/res/layout/item_favorite_group.xml
@@ -20,6 +20,7 @@
             android:layout_height="24dp" />
 
         <TextView
+            android:layout_marginStart="8dp"
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
