--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -96,7 +96,8 @@
                     android:maxLines="1"
                     android:text="@string/profile"
                     android:textColor="@color/color_5C5C5C"
-                    android:textSize="@dimen/dimen_18" />
+                    android:textSize="@dimen/dimen_18"
+                    android:textStyle="bold"/>
             </LinearLayout>
 
             <LinearLayout
@@ -121,7 +122,7 @@
                     android:text="@string/preference"
                     android:textColor="@color/color_5C5C5C"
                     android:textSize="@dimen/dimen_18"
-                   />
+                    android:textStyle="bold"/>
             </LinearLayout>
 
             <LinearLayout
@@ -146,7 +147,7 @@
                     android:text="@string/invite_friends"
                     android:textColor="@color/color_5C5C5C"
                     android:textSize="@dimen/dimen_18"
-                   />
+                    android:textStyle="bold"/>
             </LinearLayout>
 
             <LinearLayout
@@ -171,7 +172,7 @@
                     android:text="@string/account_privacy"
                     android:textColor="@color/color_5C5C5C"
                     android:textSize="@dimen/dimen_18"
-                     />
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <LinearLayout
@@ -196,7 +197,7 @@
                     android:text="@string/what_new"
                     android:textColor="@color/color_5C5C5C"
                     android:textSize="@dimen/dimen_18"
-                    />
+                    android:textStyle="bold"/>
             </LinearLayout>
 
             <LinearLayout
@@ -221,7 +222,7 @@
                     android:text="@string/help_center"
                     android:textColor="@color/color_5C5C5C"
                     android:textSize="@dimen/dimen_18"
-               />
+                    android:textStyle="bold"/>
             </LinearLayout>
 
             <LinearLayout
@@ -246,7 +247,7 @@
                     android:text="@string/log_out"
                     android:textColor="@color/color_5C5C5C"
                     android:textSize="@dimen/dimen_18"
-                     />
+                    android:textStyle="bold" />
             </LinearLayout>
 
         </LinearLayout>
