[feat] 首页对接接口

--- a/app/src/main/res/layout/home_item_featured_event.xml
+++ b/app/src/main/res/layout/home_item_featured_event.xml
@@ -6,11 +6,11 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Featured Event"
+        tools:text="Featured Event"
         android:textSize="16sp"
         android:textStyle="bold" />
 
